fix: changes colors dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,13 +17,13 @@
   }
 
   .dark {
-    --bg-color: #131315;
+    --bg-color: #222225;
     --text-color-primary: #d1d5db;
     --text-color-headings: #f9fafb;
     --text-color-secondary: #9ca3af;
     --text-color-tertiary: #6b7280;
     --border-color: #374151;
-    --link-bg: #1f2937;
+    --link-bg: #222225;
     --link-bg-hover: #374151;
     --link-border: #374151;
     --link-border-hover: #4b5563;
